# fieldopt

./: .buildinfo  .gitignore  Dockerfile  LICENSE  README.md  fieldopt.geometry.html  fieldopt.html  fieldopt.optimization.html  genindex.html  geolib.py  index.html  modules.html  objective.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  tetrapro.py
.github/workflows/: build_test.yml  deploy_container.yml  deploy_container.yml.DEP  deploy_docs.yml  deploy_docs.yml.DEP
_modules/: index.html
_modules/fieldopt/: objective.html  solver_wrapper.html  tetrapro.html
_modules/fieldopt/geometry/: domains.html  geometry.html  mesh.html  mesh_wrapper.html
_modules/fieldopt/optimization/: base.html  bayes_moe.html  grid.html
_sources/: fieldopt.geometry.rst.txt
docs/: conf.py  fieldopt.optimization.rst  fieldopt.rst  index.rst  modules.rst
fieldopt/: geolib.py  geometry.py  logging.conf  objective.py  solver_wrapper.py  tetrapro.py
fieldopt/geometry/: .geometry.py.swp  domains.py  geometry.py  mesh.py  mesh_wrapper.py
fieldopt/optimization/: base.py  bayes_moe.py  grid.py
optimization/: bayes_moe.py  grid.py
