[metadata]
name = fieldopt
description = Modules for running simple optimization experiments with SimNIBS
long_description = file:README.md
keywords = neuroimaging, electric fields, simulations, optimization, bayesian
classifiers =
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
project_urls =
	Github = https://github.com/jerdra/fieldopt
	Bug TRACKER = https://github.com/jerdra/fieldopt/issues
	Source Code = https://github.com/jerdra/fieldopt

[options]
python_requires = >= 3.7
install_requires =
	attrs
	packaging
	numpy
	numba
	simnibs >= 3.1.1
	MOE >= 1.0.0
	emcee == 2.2.1  # Bug in version 3.0.0 linear dependence test
packages = find:
zip_safe = true

[options.extras_require]
lint =
	flake8 >= 3.7.0
	yapf >= 0.30.0
all =
	%(lint)s

